# TulipaVisualizer

./: .gitignore  .gitlab-ci.yml  .prettierignore  Dockerfile-tauri  LICENSE.txt  README.md  Testing.md  er.email  eslint.config.js  package-lock.json  package.json  vite.config.ts  vitest.config.ts
code-analysis/: analysis-config.json  analyze.js  eslint.config.js  setup-analysis.sh
docs/: Testing.md  analysis-and-data-processing.md  api-reference.md  developer-guide-backend.md  developer-guide-frontend.md  user-guide.md
src/: App.css  App.tsx  dbConn.ts  duckdbBundles.ts  main.tsx
src-python/: conversion2EU.py  prepare_db_file.py  prepare_geo_json.py
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/assets/docs/: README.md  developer-guide-backend.md  developer-guide-frontend.md  developer-guide.md  user-guide.md
src-tauri/assets/geo/: eu_provinces.geo.json  netherlands-provinces.geo.json  world.geo.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: duckdb.rs  duckdb_conn.rs  import.rs  lib.rs  main.rs
src-tauri/src/queries/: capacity.rs
src-tauri/src/services/: capacity.rs  documentation.rs  import_export.rs  metadata.rs  mod.rs  production_price.rs  query.rs  query_builder.rs  residual_load.rs  storage_price.rs  system_cost.rs  transport_price.rs
src/__tests__/: App.integration.test.tsx  ErrorBoundary.test.tsx  Performance.test.tsx
src/components/: Capacity.tsx  ChartTypeSelector.tsx  DatabaseList.tsx  DatabaseSelector.tsx  DatabaseViewer.css  DatabaseViewer.tsx  DocumentationModal.test.tsx  DocumentationModal.tsx  GraphCard.tsx  GraphContainer.tsx  ProductionCosts.tsx  ResolutionSelector.tsx  StateVisualizer.tsx  SystemCosts.tsx  TimeFramePicker.tsx  Toolbar.test.tsx  Toolbar.tsx  UploadButton.tsx
src/debugtools/: generalQuery.ts
src/gateway/: db.ts  io.ts
src/hooks/: useChartTypes.ts  useMantineHelpers.ts  useMetadata.ts  useResizeHandle.ts  useVisualization.ts
src/services/: capacityQuery.ts  databaseOperations.ts  energyFlowQuery.ts  generalQuery.ts  importExport.ts  metadata.ts  productionCostsQuery.ts  productionPriceQuery.ts  residualLoadQuery.ts  storagePriceQuery.ts  systemCosts.ts  systemCostsQuery.ts  transportPriceQuery.ts
src/store/: visualizationStore.ts
src/styles/: index.css
(+52 files in other folders)
