[package]
name = "Tulipa-Energy-Visualizer"
version = "1.0.0"
description = "Visualizer for the Tulipa Energy System Optimization Model"
authors = ["com.TNO-TUDelft.CSE2000.Group-11c.2025"]
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.21.3"
tauri-plugin-dialog = "2.2.1"
arrow-ipc = "=55.1.0" # version need to match duckDB version!
duckdb = { version = "=1.3.0", features = ["bundled"] }
mockall = "0.13.1"
serial_test = "3.2.0"
tauri-plugin-fs = "2"
thiserror = "2.0.12"
tempfile = "3.20.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }


